--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@
 /config/environments/*
 /config/secrets.yml
 /config/initializers/devise.rb
+/config/deploy/*
+/config/deploy.rb
 
 # Ignore all logfiles and tempfiles.
 /log/*
