--- a/config/database.yml
+++ b/config/database.yml
@@ -13,8 +13,12 @@ default: &default
   timeout: 5000
 
 development:
-  <<: *default
-  database: "mathtrades_dev"
+  adapter: postgresql
+  encoding: unicode
+  database: mathtrades_dev
+  host: localhost
+  username: lti
+  password: $p3ctr0Cl1ck
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
